gap fixed

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ img {
   gap: 40px;
 }
 .birthday {
-  gap: 40px;
+  gap: 60px;
 }
 
 @media only screen and (min-width: 200px) {
